# cvr

./: .gitignore  Makefile  README.md  pyproject.toml  sync_reports.py
backend/: .flake8  .gitignore  Dockerfile  pyproject.toml
backend/raw/: fsp02-2025-11-21-k8s.csv
backend/reports/: fsp02-2025-11-21.md
backend/src/pccs_cvr/: app.py  main.py
backend/tests/: test_app.py  test_main.py
charts/pccs-cvr/: Chart.yaml  values.yaml
charts/pccs-cvr/templates/: clusterrole-backend.yaml  deployment-backend.yaml  deployment-frontend.yaml  pvc.yaml  service-account-backend.yaml  service-backend.yaml  service-frontend.yaml
csv/: fsp02-wiz-container-vulnerabilities.csv
data_cvr/raws/: 2025-11-22-k8s-cleansed.csv  2025-11-22-wiz.csv  2025-11-23-k8s-cleansed.csv  2025-11-23-wiz.csv
data_cvr/reports/: 2025-11-22-cvr.csv  2025-11-23-cvr.csv  2025-11-23-cvr.md  2025-11-24-cvr.csv  2025-11-24-cvr.md
frontend/: .eslintrc.json  .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/public/: config.js  config.template.js
frontend/src/: App.tsx  api.ts  index.css  vite-env.d.ts
raws/: 2025-11-22-k8s-cleansed.csv  2025-11-22-k8s.csv  2025-11-23-k8s.csv
reports/: 2025-11-21-cvr.csv  2025-11-22-cvr.csv  2025-11-22-cvr.md  2025-11-23-cvr.md  fsp02-2025-11-21.csv
src/pccs_cvr/: main.py
